--- a/src/components/shotclock/ShotClock.module.css
+++ b/src/components/shotclock/ShotClock.module.css
@@ -1,3 +1,26 @@
 .shotclock {
+  margin: 0.5rem;
+  padding: 0.2rem;
+  border: gray solid thick;
+  border-radius: 1rem;
   flex-grow: 1;
+  display: flex;
+  flex-direction: row-reverse;
+  gap: 0.1rem;
+}
+
+.shotclock > span {
+  display: block;
+  background-color: green;
+  width: 100%;
+  height: 100%;
+  border-radius: 0.5rem;
+}
+
+.warn {
+  background-color: red !important;
+}
+
+.hide {
+  opacity: 0;
 }
