--- a/src/components/playercard/PlayerCard.module.css
+++ b/src/components/playercard/PlayerCard.module.css
@@ -72,8 +72,7 @@
   font-weight: bold;
   color: white;
   flex-grow: 1;
-  display: flex;
-  align-items: center;
+  text-align: center;
 }
 
 .statusContainer {
