--- a/src/components/shotclock/ShotClock.module.css
+++ b/src/components/shotclock/ShotClock.module.css
@@ -1,15 +1,33 @@
-.shotclock {
+.shotclockContainer {
   margin: 0.5rem;
-  padding: 0.2rem;
+  flex-grow: 1;
   border: gray solid thick;
   border-radius: 1rem;
+  display: flex;
+}
+
+.shotclock {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  padding: 0 1rem;
+  color: green;
+}
+
+.shotclock .warn {
+  color: red;
+}
+
+.shotclockBar {
+  padding: 0.2rem;
   flex-grow: 1;
   display: flex;
   flex-direction: row-reverse;
   gap: 0.1rem;
 }
 
-.shotclock > span {
+.shotclockBar > span {
   display: block;
   background-color: green;
   width: 100%;
@@ -24,4 +42,16 @@
 
 .hide {
   opacity: 0;
+}
+
+.timeover {
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: red;
+  color: white;
+  font-size: 2rem;
+  font-weight: bold;
+  border-radius: 0.5rem;
 }
