--- a/src/components/shotclock/ShotClock.module.css
+++ b/src/components/shotclock/ShotClock.module.css
@@ -55,3 +55,14 @@
   font-weight: bold;
   border-radius: 0.5rem;
 }
+
+.info {
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  font-weight: bold;
+  border-radius: 0.5rem;
+  color: gray;
+}
