Add extension mechanism

--- a/src/components/playercard/PlayerCard.module.css
+++ b/src/components/playercard/PlayerCard.module.css
@@ -72,7 +72,27 @@
   font-weight: bold;
   color: white;
   flex-grow: 1;
-  text-align: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 0.5rem;
+}
+
+.nameContainer > button {
+  background-color: green;
+  height: 2rem;
+  width: 2rem;
+  border-radius: 50%;
+  font-size: 1rem;
+  font-weight: bold;
+  color: white;
+  border: white solid thin;
+  cursor: pointer;
+}
+
+.nameContainer > button:disabled {
+  background-color: gray;
+  cursor: default;
 }
 
 .statusContainer {
