--- a/src/components/statusdisplay/StatusDisplay.module.css
+++ b/src/components/statusdisplay/StatusDisplay.module.css
@@ -5,6 +5,7 @@
   background-color: gray;
   display: flex;
   flex-direction: column;
+  gap: 1rem;
   padding: 0.5rem;
   flex-grow: 3;
   font-weight: bold;
@@ -22,6 +23,25 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.status > button {
+  width: 80%;
+  font-size: 2rem;
+  color: darkgray;
+  background-color: green;
+  border: darkgray solid thick;
+  border-radius: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  padding: 2rem 0;
+}
+
+.status > button:disabled {
+  background-color: gray;
+  cursor: default;
 }
 
 .middle {
