Use react-icons for better UX

--- a/src/components/navbar/NavBar.module.css
+++ b/src/components/navbar/NavBar.module.css
@@ -6,24 +6,15 @@
 }
 
 .menu {
+  color: gray;
   height: 100%;
   border: gray solid thick;
   border-radius: 0.5rem;
   aspect-ratio: 1;
   display: flex;
+  justify-content: center;
+  align-items: center;
   cursor: pointer;
-}
-
-.burger {
-  flex-direction: column;
-  justify-content: space-evenly;
-  padding: 0 0.2rem;
-}
-
-.menu.burger > span {
-  display: block;
-  width: 100%;
-  border-bottom: gray solid thick;
 }
 
 .timebox {
@@ -36,26 +27,4 @@
   padding: 0 1rem;
   font-weight: bold;
   color: gray;
-}
-
-.toggle {
-  justify-content: center;
-  align-items: center;
-}
-
-.pause {
-  display: block;
-  height: 40%;
-  aspect-ratio: 1;
-  border-left: gray solid thick;
-  border-right: gray solid thick;
-}
-
-.play {
-  border: 6px solid transparent;
-  border-left-color: gray;
-  display: block;
-  width: 0px;
-  height: 0px;
-  transform: translate(25%);
 }
