--- a/src/components/dialog/Dialog.module.css
+++ b/src/components/dialog/Dialog.module.css
@@ -9,6 +9,7 @@
   align-items: center;
   height: 100vh;
   width: 100vw;
+  font-size: 2rem;
   color: lightgray;
   background-color: gray;
   border: lightgray solid thick;
@@ -33,6 +34,7 @@
   margin-top: 1rem;
   border: none;
   background-color: lightgrey;
+  display: flex;
 }
 
 .dialog > button:disabled {
