--- a/src/components/shotclock/ShotClock.module.css
+++ b/src/components/shotclock/ShotClock.module.css
@@ -33,7 +33,6 @@
   width: 100%;
   height: 100%;
   border-radius: 0.5rem;
-  transition: opacity 1s;
 }
 
 .warn {
@@ -41,7 +40,7 @@
 }
 
 .hide {
-  opacity: 0;
+  visibility: hidden;
 }
 
 .timeover {
