--- a/src/components/shotclock/ShotClock.module.css
+++ b/src/components/shotclock/ShotClock.module.css
@@ -11,6 +11,7 @@
   justify-content: center;
   align-items: center;
   font-size: 2rem;
+  font-weight: bold;
   padding: 0 1rem;
   color: green;
 }
