--- a/src/components/shotclock/ShotClock.module.scss
+++ b/src/components/shotclock/ShotClock.module.scss
@@ -1,7 +1,9 @@
+@import "../../app/_variables.scss";
+
 .shotclockContainer {
   margin: 0.5rem;
   flex-grow: 1;
-  border: gray solid thick;
+  border: $border-thick;
   border-radius: 1rem;
   display: flex;
 }
@@ -13,11 +15,11 @@
   font-size: 2rem;
   font-weight: bold;
   padding: 0 1rem;
-  color: green;
+  color: map-get($colors, ok);
 }
 
 .hurry {
-  color: red !important;
+  color: map-get($colors, nok) !important;
 }
 
 .shotclockBar {
@@ -26,22 +28,18 @@
   display: flex;
   flex-direction: row-reverse;
   gap: 0.1rem;
-}
 
-.shotclockBar > span {
-  display: block;
-  background-color: green;
-  width: 100%;
-  height: 100%;
-  border-radius: 0.5rem;
+  span {
+    display: block;
+    background-color: map-get($colors, ok);
+    width: 100%;
+    height: 100%;
+    border-radius: 0.5rem;
+  }
 }
 
 .warn {
-  background-color: red !important;
-}
-
-.hide {
-  visibility: hidden;
+  background-color: map-get($colors, nok) !important;
 }
 
 .timeover {
@@ -49,8 +47,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: red;
-  color: white;
+  background: map-get($colors, nok);
+  color: $hilite;
   font-size: 2rem;
   font-weight: bold;
   border-radius: 0.5rem;
@@ -64,5 +62,5 @@
   font-size: 2rem;
   font-weight: bold;
   border-radius: 0.5rem;
-  color: gray;
+  color: map-get($colors, main);
 }
