--- a/src/components/navbar/NavBar.module.scss
+++ b/src/components/navbar/NavBar.module.scss
@@ -7,25 +7,24 @@
   padding: 0.5rem;
 }
 
-.menu {
+.bordered-box {
   height: 100%;
   color: map-get($colors, main);
   border: $border-thick;
   border-radius: 0.5rem;
-  aspect-ratio: 1;
   display: flex;
-  justify-content: center;
   align-items: center;
+}
+
+.menu {
+  @extend .bordered-box;
+  aspect-ratio: 1;
+  justify-content: center;
   cursor: pointer;
 }
 
 .timebox {
-  height: 100%;
-  color: map-get($colors, main);
-  border: $border-thick;
-  border-radius: 0.5rem;
-  display: flex;
-  align-items: center;
+  @extend .bordered-box;
   gap: 0.5rem;
   padding: 0 1rem;
   font-weight: bold;
