--- a/src/components/dialog/Dialog.module.scss
+++ b/src/components/dialog/Dialog.module.scss
@@ -9,15 +9,26 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 0.5rem;
   height: 100vh;
   width: 100vw;
   font-size: 2rem;
   color: $hilite;
   background-color: map-get($colors, main);
 
+  h1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 10rem;
+    background: center / contain no-repeat url("/carom.svg");
+    text-shadow: 0px 0px 6px black;
+  }
+
   input {
     max-width: 90vw;
     font-size: 2rem;
+    border: $border-thick-hilite;
     border-radius: 1rem;
     padding: 0.5rem;
   }
@@ -30,5 +41,28 @@
     border: none;
     background-color: $hilite;
     display: flex;
+  }
+
+  .settings {
+    position: absolute;
+    top: 2rem;
+    right: 2rem;
+  }
+
+  .slider {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 0.5rem;
+    width: 80vw;
+
+    input {
+      flex-grow: 1;
+    }
+
+    span {
+      min-width: 2rem;
+      text-align: right;
+    }
   }
 }
