--- a/src/components/statusdisplay/StatusDisplay.module.scss
+++ b/src/components/statusdisplay/StatusDisplay.module.scss
@@ -8,6 +8,7 @@
   color: $hilite;
   border: $border-thick-hilite;
   border-radius: 1rem;
+  padding: 0.5rem;
 }
 
 .status {
@@ -17,16 +18,36 @@
   background-color: map-get($colors, main);
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
   gap: 1rem;
-  padding: 0.5rem;
+  padding: 1rem 0;
   flex-grow: 3;
   font-weight: bold;
-  justify-content: center;
-  align-items: center;
 
-  div {
+  &.middle {
+    order: 3;
+  }
+
+  & > div {
     @extend .bordered-box;
-    font-size: calc(25vw / 3);
+
+    &:nth-child(1) {
+      display: flex;
+      flex-direction: column;
+      gap: 0.3rem;
+      font-size: 1.2rem;
+
+      div {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+      }
+    }
+
+    &:nth-child(2) {
+      font-size: calc(25vw / 3);
+    }
   }
 
   button {
@@ -34,15 +55,9 @@
     font-size: 2rem;
     padding: 2rem 0;
     background-color: map-get($colors, ok);
-    cursor: pointer;
 
     &:disabled {
       background-color: map-get($colors, main);
-      cursor: default;
     }
   }
-}
-
-.middle {
-  order: 3;
 }
