--- a/src/app/layout.module.scss
+++ b/src/app/layout.module.scss
@@ -1,7 +1,14 @@
 .layout {
   height: 100vh;
   width: 100vw;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
+  padding: 0.5rem;
+
+  & > div {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    gap: 0.5rem;
+  }
 }
