--- a/src/components/shotclock/ShotClock.module.scss
+++ b/src/components/shotclock/ShotClock.module.scss
@@ -1,64 +1,48 @@
 @import "../../app/_variables.scss";
 
+:export {
+  sliderStart: map-get($colors, ok);
+  sliderEnd: map-get($colors, nok);
+}
+
 .shotclockContainer {
-  margin: 0.5rem;
   flex-grow: 1;
   border: $border-thick;
-  border-radius: 1rem;
-  display: flex;
-}
-
-.shotclock {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 2rem;
-  font-weight: bold;
-  padding: 0 1rem;
-  color: map-get($colors, ok);
-}
-
-.hurry {
-  color: map-get($colors, nok) !important;
-}
-
-.shotclockBar {
-  padding: 0.2rem;
-  flex-grow: 1;
-  display: flex;
-  flex-direction: row-reverse;
-  gap: 0.1rem;
-
-  span {
-    display: block;
-    background-color: map-get($colors, ok);
-    width: 100%;
-    height: 100%;
-    border-radius: 0.5rem;
-  }
-}
-
-.warn {
-  background-color: map-get($colors, nok) !important;
-}
-
-.fit-to-box {
-  flex-grow: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 2rem;
-  font-weight: bold;
   border-radius: 0.5rem;
-}
+  display: flex;
+  padding: 0.5rem;
 
-.timeover {
-  @extend .fit-to-box;
-  background: map-get($colors, nok);
-  color: $hilite;
-}
+  .centerSelf {
+    height: 100%;
+    flex-grow: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: map-get($colors, main);
+    font-size: 2rem;
+    font-weight: bold;
 
-.info {
-  @extend .fit-to-box;
-  color: map-get($colors, main);
+    &.overtime {
+      color: map-get($colors, bg);
+    }
+
+    &.slider {
+      background-repeat: no-repeat;
+      background-position: right;
+      transition: background-size linear 1s;
+
+      & div {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-width: 3rem;
+        border-radius: 50%;
+        background-color: map-get($colors, bg);
+      }
+    }
+  }
+
+  &.warn {
+    background-color: map-get($colors, nok);
+  }
 }
