--- a/src/components/scoreboard/ScoreBoard.module.scss
+++ b/src/components/scoreboard/ScoreBoard.module.scss
@@ -1,6 +1,32 @@
+@import "../../app/_variables.scss";
+
 .scoreBoard {
   flex-grow: 8;
   display: flex;
   justify-content: space-between;
   gap: 0.5rem;
+
+  & > div:nth-child(2) {
+    order: 2;
+
+    & > div:nth-child(2) {
+      background-color: $white;
+    }
+  }
+
+  & > div:nth-child(3) {
+    order: 4;
+
+    & > div:nth-child(2) {
+      background-color: $yellow;
+    }
+  }
+
+  & > div:nth-child(4) {
+    order: 5;
+
+    & > div:nth-child(2) {
+      background-color: $red;
+    }
+  }
 }
