--- a/src/components/dialog/Dialog.module.scss
+++ b/src/components/dialog/Dialog.module.scss
@@ -15,6 +15,7 @@
   font-size: 2rem;
   color: $hilite;
   background-color: map-get($colors, main);
+  overflow-x: hidden;
 
   h1 {
     display: flex;
