--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,3 +1,5 @@
+@import "./_variables.scss";
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -8,6 +10,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  background-color: map-get($theme, background-color);
 }
 
 .hide {
