--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,4 +1,15 @@
-@import "./_variables.scss";
+@import "./_themes.scss";
+@import "./_mixins.scss";
+
+:root {
+  @include spread-map($theme-light);
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    @include spread-map($theme-dark);
+  }
+}
 
 * {
   box-sizing: border-box;
@@ -10,7 +21,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  background-color: map-get($theme, background-color);
+  background-color: var(--background-color);
 }
 
 .hide {
