--- a/src/components/dialog/Dialog.module.scss
+++ b/src/components/dialog/Dialog.module.scss
@@ -1,5 +1,3 @@
-@import "../../app/_variables.scss";
-
 .dialog {
   position: absolute;
   top: 0;
@@ -13,8 +11,8 @@
   height: 100vh;
   width: 100vw;
   font-size: 2rem;
-  color: map-get($theme, secondary-color);
-  background-color: map-get($theme, primary-color);
+  color: var(--secondary-color);
+  background-color: var(--primary-color);
   overflow-x: hidden;
 
   h1 {
@@ -29,8 +27,8 @@
   input {
     max-width: 90vw;
     font-size: 2rem;
-    border: map-get($theme, border-thick-secondary);
-    border-radius: map-get($theme, border-radius);
+    border: var(--border-thick-secondary);
+    border-radius: var(--border-radius);
     padding: 0.5rem;
 
     &:disabled {
@@ -40,11 +38,11 @@
 
   button {
     font-size: 2rem;
-    border-radius: map-get($theme, border-radius);
+    border-radius: var(--border-radius);
     padding: 1rem;
     margin-top: 1rem;
     border: none;
-    background-color: map-get($theme, secondary-color);
+    background-color: var(--secondary-color);
     display: flex;
   }
 
