--- a/src/components/scoreboard/ScoreBoard.module.scss
+++ b/src/components/scoreboard/ScoreBoard.module.scss
@@ -1,5 +1,3 @@
-@import "../../app/_variables.scss";
-
 .scoreBoard {
   flex-grow: 8;
   display: flex;
@@ -10,7 +8,7 @@
     order: 2;
 
     & > div:nth-child(2) {
-      background-color: map-get($theme, white);
+      background-color: var(--white);
     }
   }
 
@@ -18,7 +16,7 @@
     order: 4;
 
     & > div:nth-child(2) {
-      background-color: map-get($theme, yellow);
+      background-color: var(--yellow);
     }
   }
 
@@ -26,7 +24,7 @@
     order: 5;
 
     & > div:nth-child(2) {
-      background-color: map-get($theme, red);
+      background-color: var(--red);
     }
   }
 }
