--- a/src/components/statusdisplay/StatusDisplay.module.scss
+++ b/src/components/statusdisplay/StatusDisplay.module.scss
@@ -1,21 +1,19 @@
-@import "../../app/_variables.scss";
-
 .bordered-box {
   display: flex;
   align-items: center;
   justify-content: center;
   width: 80%;
-  color: map-get($theme, secondary-color);
-  border: map-get($theme, border-thick-secondary);
-  border-radius: map-get($theme, border-radius);
+  color: var(--secondary-color);
+  border: var(--border-thick-secondary);
+  border-radius: var(--border-radius);
   padding: 0.5rem;
 }
 
 .status {
   height: 100%;
-  border: map-get($theme, border-thick);
-  border-radius: map-get($theme, border-radius);
-  background-color: map-get($theme, primary-color);
+  border: var(--border-thick);
+  border-radius: var(--border-radius);
+  background-color: var(--primary-color);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -48,8 +46,8 @@
     &:nth-child(2) {
       flex-grow: 1;
       font-size: clamp(5rem, 0.7143rem + 19.0476vw, 15rem);
-      background-color: map-get($theme, secondary-color);
-      color: map-get($theme, font-color);
+      background-color: var(--secondary-color);
+      color: var(--font-color);
     }
   }
 
@@ -57,10 +55,10 @@
     @extend .bordered-box;
     font-size: 2rem;
     padding: 2rem 0;
-    background-color: map-get($theme, ok-color);
+    background-color: var(--ok-color);
 
     &:disabled {
-      background-color: map-get($theme, primary-color);
+      background-color: var(--primary-color);
     }
   }
 }
