Add button for changing theme

--- a/src/app/_themes.scss
+++ b/src/app/_themes.scss
@@ -1,5 +1,11 @@
 @import "./_variables.scss";
 
+@mixin spread-map($map: ()) {
+  @each $key, $value in $map {
+    #{$key}: $value;
+  }
+}
+
 $theme-light: $theme;
 
 $theme-dark: map-merge(
