--- a/src/app/_variables.scss
+++ b/src/app/_variables.scss
@@ -26,6 +26,7 @@ $elements: (
   --border-radius: 1rem,
   --border-radius-tight: 0.5rem,
   --border-radius-round: 50%,
+  --gap: 0.5rem,
 );
 
 $theme: map-merge(
