Change theme switch mechanics: Expose row of buttons

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -23,4 +23,9 @@
   &.green {
     @include spread-map($theme-green);
   }
+
+  .buttonContainer {
+    display: flex;
+    gap: var(--gap);
+  }
 }
